--- a/src/main/resources/static/css/admin/adminSidebar.css
+++ b/src/main/resources/static/css/admin/adminSidebar.css
@@ -38,9 +38,6 @@
     opacity: 0;
   }
 }
-body {
-  font-size: 0.9rem;
-}
 .page-wrapper .sidebar-wrapper,
 .sidebar-wrapper .sidebar-brand > a,
 .sidebar-wrapper .sidebar-dropdown > a:after,
@@ -59,10 +56,10 @@ body {
   transition: all 0.3s ease;
 }
 
-/*----------------page-wrapper----------------*/
-
 .page-wrapper {
   height: 100vh;
+  position: absolute;
+  font-size: 0.9rem;
 }
 
 .page-wrapper .theme {
@@ -77,8 +74,6 @@ body {
   background: #1d1d1d;
 }
 
-/*----------------toggeled sidebar----------------*/
-
 .page-wrapper.toggled .sidebar-wrapper {
   left: 0px;
 }
@@ -88,19 +83,20 @@ body {
     padding-left: 300px;
   }
 }
-/*----------------show sidebar button----------------*/
+
 #show-sidebar {
   position: fixed;
   left: 0;
-  top: 10px;
+  top: 50px;
   border-radius: 0 4px 4px 0px;
   width: 35px;
   transition-delay: 0.3s;
+  z-index: 1040;
+  margin: 0;
 }
 .page-wrapper.toggled #show-sidebar {
   left: -40px;
 }
-/*----------------sidebar-wrapper----------------*/
 
 .sidebar-wrapper {
   width: 260px;
@@ -109,7 +105,7 @@ body {
   position: fixed;
   top: 0;
   left: -300px;
-  z-index: 999;
+  z-index: 1040;
 }
 
 .sidebar-wrapper ul {
@@ -122,7 +118,6 @@ body {
   text-decoration: none;
 }
 
-/*----------------sidebar-content----------------*/
 
 .sidebar-content {
   max-height: calc(100% - 30px);
@@ -135,7 +130,6 @@ body {
   overflow-y: hidden;
 }
 
-/*--------------------sidebar-brand----------------------*/
 
 .sidebar-wrapper .sidebar-brand {
   padding: 10px 20px;
@@ -153,7 +147,6 @@ body {
   cursor: pointer;
   font-size: 20px;
 }
-/*--------------------sidebar-header----------------------*/
 
 .sidebar-wrapper .sidebar-header {
   padding: 20px;
@@ -198,13 +191,11 @@ body {
   color: #5cb85c;
 }
 
-/*-----------------------sidebar-search------------------------*/
 
 .sidebar-wrapper .sidebar-search > div {
   padding: 10px 20px;
 }
 
-/*----------------------sidebar-menu-------------------------*/
 
 .sidebar-wrapper .sidebar-menu {
   padding-bottom: 10px;
@@ -303,7 +294,6 @@ body {
   right: 17px;
 }
 
-/*--------------------------side-footer------------------------------*/
 
 .sidebar-footer {
   position: absolute;
@@ -318,11 +308,13 @@ body {
   height: 30px;
   line-height: 30px;
   position: relative;
+  margin: auto;
 }
 
 .sidebar-footer > a .notification {
   position: absolute;
   top: 0;
+  margin-left: 5px;
 }
 
 .badge-sonar {
@@ -348,7 +340,6 @@ body {
   animation: sonar 1.5s infinite;
 }
 
-/*--------------------------page-content-----------------------------*/
 
 .page-wrapper .page-content {
   display: inline-block;
@@ -367,7 +358,7 @@ body {
 
 /*------scroll bar---------------------*/
 
-::-webkit-scrollbar {
+/*::-webkit-scrollbar {
   width: 7px;
   height: 7px;
 }
@@ -399,10 +390,8 @@ body {
 }
 ::-webkit-scrollbar-corner {
   background: transparent;
-}
+} */
 
-
-/*-----------------------------chiller-theme-------------------------------------------------*/
 
 .chiller-theme .sidebar-wrapper {
     background: #1d1d1d;
